; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_licence.c_licence_process_platform_challenge.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_licence.c_licence_process_platform_challenge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LICENCE_TOKEN_SIZE = common dso_local global i32 0, align 4
@LICENCE_HWID_SIZE = common dso_local global i32 0, align 4
@LICENCE_SIGNATURE_SIZE = common dso_local global i32 0, align 4
@g_licence_key = common dso_local global i64 0, align 8
@g_licence_sign_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @licence_process_platform_challenge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @licence_process_platform_challenge(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %13 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %5, align 8
  %16 = alloca i32, i64 %14, align 16
  store i64 %14, i64* %6, align 8
  %17 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %18 = zext i32 %17 to i64
  %19 = alloca i32, i64 %18, align 16
  store i64 %18, i64* %7, align 8
  %20 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %21 = zext i32 %20 to i64
  %22 = alloca i32, i64 %21, align 16
  store i64 %21, i64* %8, align 8
  %23 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %24 = zext i32 %23 to i64
  %25 = alloca i32, i64 %24, align 16
  store i64 %24, i64* %9, align 8
  %26 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %27 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %28 = add nsw i32 %26, %27
  %29 = zext i32 %28 to i64
  %30 = alloca i32, i64 %29, align 16
  store i64 %29, i64* %10, align 8
  %31 = load i32, i32* @LICENCE_SIGNATURE_SIZE, align 4
  %32 = zext i32 %31 to i64
  %33 = alloca i32, i64 %32, align 16
  store i64 %32, i64* %11, align 8
  %34 = load i32, i32* %2, align 4
  %35 = call i32 @licence_parse_platform_challenge(i32 %34, i32** %3, i32** %4)
  %36 = load i32*, i32** %3, align 8
  %37 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %38 = call i32 @memcpy(i32* %16, i32* %36, i32 %37)
  %39 = call i8* (...) @rdssl_rc4_info_create()
  store i8* %39, i8** %12, align 8
  %40 = load i8*, i8** %12, align 8
  %41 = load i64, i64* @g_licence_key, align 8
  %42 = inttoptr i64 %41 to i8*
  %43 = call i32 @rdssl_rc4_set_key(i8* %40, i8* %42, i32 16)
  %44 = load i8*, i8** %12, align 8
  %45 = load i32*, i32** %3, align 8
  %46 = bitcast i32* %45 to i8*
  %47 = bitcast i32* %19 to i8*
  %48 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %49 = call i32 @rdssl_rc4_crypt(i8* %44, i8* %46, i8* %47, i32 %48)
  %50 = load i8*, i8** %12, align 8
  %51 = call i32 @rdssl_rc4_info_delete(i8* %50)
  %52 = call i32 @licence_generate_hwid(i32* %22)
  %53 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %54 = call i32 @memcpy(i32* %30, i32* %19, i32 %53)
  %55 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %30, i64 %56
  %58 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %59 = call i32 @memcpy(i32* %57, i32* %22, i32 %58)
  %60 = load i32, i32* @g_licence_sign_key, align 4
  %61 = mul nuw i64 4, %29
  %62 = trunc i64 %61 to i32
  %63 = call i32 @sec_sign(i32* %33, i32 16, i32 %60, i32 16, i32* %30, i32 %62)
  %64 = call i8* (...) @rdssl_rc4_info_create()
  store i8* %64, i8** %12, align 8
  %65 = load i8*, i8** %12, align 8
  %66 = load i64, i64* @g_licence_key, align 8
  %67 = inttoptr i64 %66 to i8*
  %68 = call i32 @rdssl_rc4_set_key(i8* %65, i8* %67, i32 16)
  %69 = load i8*, i8** %12, align 8
  %70 = bitcast i32* %22 to i8*
  %71 = bitcast i32* %25 to i8*
  %72 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %73 = call i32 @rdssl_rc4_crypt(i8* %69, i8* %70, i8* %71, i32 %72)
  %74 = call i32 @licence_send_platform_challenge_response(i32* %16, i32* %25, i32* %33)
  %75 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %75)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @licence_parse_platform_challenge(i32, i32**, i32**) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i8* @rdssl_rc4_info_create(...) #2

declare dso_local i32 @rdssl_rc4_set_key(i8*, i8*, i32) #2

declare dso_local i32 @rdssl_rc4_crypt(i8*, i8*, i8*, i32) #2

declare dso_local i32 @rdssl_rc4_info_delete(i8*) #2

declare dso_local i32 @licence_generate_hwid(i32*) #2

declare dso_local i32 @sec_sign(i32*, i32, i32, i32, i32*, i32) #2

declare dso_local i32 @licence_send_platform_challenge_response(i32*, i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
